--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -567,7 +567,8 @@ m4trace:configure.ac:61: -1- AC_CONFIG_FILES([
 	lambda/Makefile
 	nullptr/Makefile
 	rvalue_reference/Makefile
-	uniform_initialize/Makefile])
+	uniform_initialize/Makefile
+	chrono/Makefile])
 m4trace:configure.ac:61: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
 m4trace:configure.ac:61: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
