--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -4,7 +4,7 @@ m4trace:aclocal.m4:1042: -1- m4_include([m4/ltoptions.m4])
 m4trace:aclocal.m4:1043: -1- m4_include([m4/ltsugar.m4])
 m4trace:aclocal.m4:1044: -1- m4_include([m4/ltversion.m4])
 m4trace:aclocal.m4:1045: -1- m4_include([m4/lt~obsolete.m4])
-m4trace:configure.ac:5: -1- AC_INIT([c11], [0.1], [lilinjiang@gmail.com])
+m4trace:configure.ac:5: -1- AC_INIT([c11], [0.1], [lilinj2000@gmail.com])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -550,16 +550,16 @@ m4trace:configure.ac:38: -1- m4_pattern_allow([^LT_REVISION$])
 m4trace:configure.ac:39: -1- AC_SUBST([LT_AGE])
 m4trace:configure.ac:39: -1- AC_SUBST_TRACE([LT_AGE])
 m4trace:configure.ac:39: -1- m4_pattern_allow([^LT_AGE$])
-m4trace:configure.ac:53: -1- AC_SUBST([GTEST_HOME])
-m4trace:configure.ac:53: -1- AC_SUBST_TRACE([GTEST_HOME])
-m4trace:configure.ac:53: -1- m4_pattern_allow([^GTEST_HOME$])
-m4trace:configure.ac:57: -1- AC_SUBST([GTEST_CPPFLAGS])
-m4trace:configure.ac:57: -1- AC_SUBST_TRACE([GTEST_CPPFLAGS])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^GTEST_CPPFLAGS$])
-m4trace:configure.ac:58: -1- AC_SUBST([GTEST_LIBADD])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([GTEST_LIBADD])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^GTEST_LIBADD$])
-m4trace:configure.ac:61: -1- AC_CONFIG_FILES([
+m4trace:configure.ac:49: -1- AC_SUBST([GTEST_HOME])
+m4trace:configure.ac:49: -1- AC_SUBST_TRACE([GTEST_HOME])
+m4trace:configure.ac:49: -1- m4_pattern_allow([^GTEST_HOME$])
+m4trace:configure.ac:53: -1- AC_SUBST([GTEST_CPPFLAGS])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([GTEST_CPPFLAGS])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^GTEST_CPPFLAGS$])
+m4trace:configure.ac:54: -1- AC_SUBST([GTEST_LIBADD])
+m4trace:configure.ac:54: -1- AC_SUBST_TRACE([GTEST_LIBADD])
+m4trace:configure.ac:54: -1- m4_pattern_allow([^GTEST_LIBADD$])
+m4trace:configure.ac:57: -1- AC_CONFIG_FILES([
 	Makefile
 	autotype/Makefile
 	delegating_constructors/Makefile
@@ -569,32 +569,32 @@ m4trace:configure.ac:61: -1- AC_CONFIG_FILES([
 	rvalue_reference/Makefile
 	uniform_initialize/Makefile
 	chrono/Makefile])
-m4trace:configure.ac:61: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:57: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:61: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:61: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:61: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:61: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:61: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:61: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:61: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:61: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:57: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:57: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:57: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:57: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:57: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:57: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:57: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:57: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:57: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:57: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:57: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:57: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
